--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "topthink/framework": "^v8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.5",
+        "phpunit/phpunit": "9.6.23",
         "friendsofphp/php-cs-fixer": "^3.75"
     },
     "autoload": {
