--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["captcha", "验证码"],
     "type": "library",
     "license": "MIT",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "support": {
         "issues": "https://github.com/ymiras/think-captcha/issues",
         "source": "https://github.com/ymiras/think-captcha"
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=8.0",
         "gregwar/captcha": "^1.1",
-        "topthink/framework": "^v8.0"
+        "topthink/framework": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.6.23",
@@ -27,7 +27,10 @@
     "autoload": {
         "psr-4": {
             "Ymiras\\ThinkCaptcha\\": "src/"
-        }
+        },
+        "files": [
+            "src/helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
